202203030
Enabled suppression of Ident
Added Ident i2c audio switching
Added selective quad i2c audio switching

202202260
Add html control of video switch as an option
Correct bug in dtmf dispaly overide selection
Add option to retain old config file on upgrade

202202230
Limit quad view trigger to first 4 sources

202202220
Add Status screen to carousel options
Correct handing of cascaded HDMI switches

202202170
Convert config files to Unix format (from dos) if required
Suppress anounce message on transition from multi-input quad to single input

202202150
Handle Active Hours spanning midnight UTC
Provide dtmf diagnostics in ssh console menu

202202140
Beta 2 Build
Added Audio output destination port and level control
Added i2c Audio Switching
Added Hardware Shutdown Button
Still needs clock, VLC Carousel, i2c video switching and i2c accessory switching

202202082
Beta Build
(without Clock, i2c audio switching, VLC carousel or hardware shutdown button)

202201010
Initial Build
