@@ -13,5 +13,7 @@ sudo killall -9 fbi >/dev/null 2>/dev/null
 
 sudo killall rptr >/dev/null 2>/dev/null
 
+sudo killall speaker-test >/dev/null 2>/dev/null
+
 exit
 
